--- a/package.json
+++ b/package.json
@@ -9,31 +9,30 @@
   "author": "jtvberg",
   "license": "CC0-1.0",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "dotenv-webpack": "^7.0.3",
-    "electron": "^14.0.0",
-    "electron-reload": "^2.0.0-alpha.1"
+    "@babel/core": "^7.11.6",
+    "dotenv-webpack": "^2.0.0",
+    "electron": "^10.1.1",
+    "electron-reload": "^1.5.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
-    "@reduxjs/toolkit": "^1.6.2",
-    "babel-loader": "^8.2.2",
-    "bootstrap": "^4.6.0",
-    "css-loader": "^6.2.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@reduxjs/toolkit": "^1.4.0",
+    "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.2",
+    "css-loader": "^4.2.2",
     "firebase": "^9.0.1",
-    "jquery": "^3.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.15.3",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.39.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0"
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
